<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>rosmip</name>
  <version>0.0.0</version>
  <description>
      The interface between "libmip" and ROS.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Ubuntu packages dependencies:
       get the keys using "rosdep db"  -->
  <depend>libbluetooth-dev</depend>
  <depend>libglib-dev</depend>
  <depend>libncurses-dev</depend>
  <!-- ROS dependencies -->
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
